fix collapse anchor color

--- a/assets/scss/components/_styles.scss
+++ b/assets/scss/components/_styles.scss
@@ -3,15 +3,9 @@
 }
 
 .collapseTrigger {
-
     position: relative;
-    color: $secondary;
     padding-right: 20px;
     display: inline-block;
-
-    &:hover {
-        color: $secondary;
-    }
 
     &::after {
         @extend .fas; // for font awsome use in ::after
